Implement bible reference overlay (part of #262)

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -31,4 +31,7 @@
         <attr name="windowButtonStrokeColor" format="color"/>
         <attr name="windowButtonBackgroundColor" format="color"/>
     </declare-styleable>
+    <declare-styleable name="bibleReferenceOverlayTheme">
+        <attr name="bibleReferenceOverlayBackgroundColor" format="color"/>
+    </declare-styleable>
 </resources>
