--- a/app/src/main/res/values/barstyles.xml
+++ b/app/src/main/res/values/barstyles.xml
@@ -18,6 +18,8 @@
 		<item name="transportButtonColor">#ffffff</item>
 		<item name="windowButtonStrokeColor">#80FFFFFF</item>
 		<item name="windowButtonBackgroundColor">#B78D8D8D</item>
+		<item name="bibleReferenceOverlayBackgroundColor">#DEEEEEEE</item>
+
 		<item name="speakTransportBackground">#FFFFFF</item>
 		<item name="transportBarHeight">75dp</item>
 	</style>
@@ -30,6 +32,7 @@
 		<item name="transportButtonColor">#d4d4d4</item>
 		<item name="windowButtonStrokeColor">#80000000</item>
 		<item name="windowButtonBackgroundColor">#9b6e6e6e</item>
+		<item name="bibleReferenceOverlayBackgroundColor">#DE000000</item>
 		<item name="speakTransportBackground">#000000</item>
 		<item name="transportBarHeight">75dp</item>
 	</style>
