Major Reading Plan overhaul. Use DB for everything instead of files and sharedPrefs. Support for Date-based plans. Addresses #55, #292, #283, and partially #180 (not quite good yet, need more options to delete plan and also edit plan name/description. Also need to be able to select the plan file from device instead of just looking at one folder).

--- a/app/src/main/res/menu/reading_plan.xml
+++ b/app/src/main/res/menu/reading_plan.xml
@@ -13,4 +13,7 @@
 	<item android:id="@+id/reset" 
 		  android:title="@string/reset"
 		  android:icon="@android:drawable/ic_menu_delete"/>
+	<item android:id="@+id/importNewPlan"
+		android:title="@string/import_plan"
+		android:icon="@android:drawable/ic_menu_day"/>
 </menu>
