--- a/app/src/main/res/menu/reading_plan_list_context_menu.xml
+++ b/app/src/main/res/menu/reading_plan_list_context_menu.xml
@@ -4,6 +4,6 @@
  @author Martin Denham [mjdenham at gmail dot com]
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/reset" 
-		  android:title="@string/reset"/>
+	<item android:id="@+id/deletePlan"
+		  android:title="@string/delete_plan"/>
 </menu>
