--- a/app/src/main/res/menu/main_bible_options_menu.xml
+++ b/app/src/main/res/menu/main_bible_options_menu.xml
@@ -9,14 +9,17 @@
 		android:id="@+id/tabsSubMenu"
         android:title="@string/tabs">
         <menu>
-            <item android:id="@+id/newTab"
-                android:title="@string/new_tab"
-				/>
-            <item android:id="@+id/closeTab"
-                android:title="@string/close_tab"
-				/>
             <item android:id="@+id/switchToTab"
                 android:title="@string/switch_to_tab"
+				/>
+			<item android:id="@+id/newTab"
+                android:title="@string/new_tab"
+				/>
+			<item android:id="@+id/cloneTab"
+                android:title="@string/new_copied_tab"
+				/>
+			<item android:id="@+id/closeTab"
+                android:title="@string/close_tab"
 				/>
         </menu>
     </item>
