--- a/app/src/main/res/layout/reading_plan_one_reading.xml
+++ b/app/src/main/res/layout/reading_plan_one_reading.xml
@@ -7,12 +7,12 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
-  	<ImageView android:id="@+id/tick" 
+  	<ImageView android:id="@+id/tickImageView"
   	    android:src="@drawable/btn_check_buttonless_off"
   	    android:contentDescription="Tick"
   	    android:layout_marginRight="5dip"/>
   	
-  	<TextView android:id="@+id/passage"
+  	<TextView android:id="@+id/passageTextView"
 		android:textAppearance="?android:attr/textAppearanceMedium"/>
     
   	<Button android:id="@+id/readButton"
