Allow naming tabs. Show abbreviated forms of bible book names in listing

--- a/app/src/main/res/menu/main_bible_options_menu.xml
+++ b/app/src/main/res/menu/main_bible_options_menu.xml
@@ -21,6 +21,9 @@
 			<item android:id="@+id/closeTab"
                 android:title="@string/close_tab"
 				/>
+			<item android:id="@+id/renameTab"
+                android:title="@string/rename_tab"
+				/>
         </menu>
     </item>
 
