--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -72,7 +72,7 @@
                         android:id="@+id/pageTitle"
                         style="@style/BibleTitle1"
                         android:layout_width="0dp"
-                        android:ellipsize="middle"
+                        android:ellipsize="end"
                         app:layout_constraintBottom_toTopOf="@+id/documentTitle"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
